# vital-reader

./: .gitignore  CONTRIBUTING  Cargo.toml  LICENSE  README.md  tarpaulin.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cli/: commands.rs  menu.rs  mod.rs  ui.rs
src/config/: mod.rs  serial_config.rs
src/data/: formatter.rs  mod.rs  parser.rs
src/fake/: generators.rs  hl7.rs  mod.rs  vital_signs.rs  waveform.rs
src/port/: connection.rs  detector.rs  mod.rs  selector.rs
src/reader/: mod.rs  session.rs  stats.rs
tests/: config_tests.rs  data_tests.rs  port_tests.rs
tests/integration/: coverage_helpers.rs  end_to_end_tests.rs  mod.rs
tests/unit/: mod.rs
tests/unit/config/: mod.rs  serial_config_tests.rs
tests/unit/data/: formatter_tests.rs  mod.rs  parser_tests.rs
tests/unit/port/: connection_tests.rs  detector_tests.rs  mod.rs  selector_tests.rs
tests/unit/reader/: mod.rs  session_tests.rs  stats_tests.rs
